# nanoSAT

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  build_debug.sh  build_release.sh  build_relwithdebinfo.sh  configure.sh  run_coverage_macos.sh  run_profiler_macos.sh
src/: clauses.hpp  logging.hpp  main.cpp  options.hpp  parse.hpp  restart.hpp  solver.hpp
tests/: CMakeLists.txt  nanosat_parse_test.cpp  nanosat_sat_test.cpp
